Use GitHub cache in CI image building

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -52,3 +52,5 @@ jobs:
           build-args: VERSION=${{ steps.rel_info.outputs.PG_REL_TAG }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
